--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.0",
-    "next": "15.5.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
-  },
+  "@supabase/supabase-js": "^2.45.0",
+  "next": "15.5.3",
+  "react": "18.3.1",
+  "react-dom": "18.3.1",
+  "tailwindcss": "^4.0.0"
+}
   "devDependencies": {
     "typescript": "^5.4.0",
     "@types/node": "^20.11.0",
