--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "burbli",
   "private": true,
   "version": "0.1.0",
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
     "next": "15.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "typescript": "^5.4.0",
